Add protocol extensions and update gitignore
- Extend yj_protocol.h with advanced features:
  * Add retry mechanism with yj_send_with_retry()
  * Implement timeout checking with yj_check_timeouts()
  * Add sequence-based sending with yj_send_with_seq()
  * Include ACK/NACK support and window sizing
  * Add large data segmentation and statistics functions

- Update .gitignore with comprehensive patterns for:
  * Directories (logs, __pycache__)
  * IDE files (.vscode, .idea)
  * OS artifacts (.DS_Store)
  * Temporary and log files

- Add Chinese porting guide documentation file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
+# 目录忽略
 /logs/
+
+# 特定文件忽略
+serial_debugger_config_v2.json
+
+# Python编译缓存
+__pycache__/
+*.py[cod]
+*$py.class
+
+# IDE特定文件
+.vscode/
+.idea/
+
+# 操作系统文件
+.DS_Store
+Thumbs.db
+
+# 临时文件
+*.tmp
+*.bak
+*.swp
+*.swo
+
+# 日志文件
+*.log
