Refactor snake game plugin and add RL model weights
- Consolidate RL algorithms into rl_algorithms.py (removing dqn_agent.py)
- Add trained model weights for A2C, DQN, and PPO agents
- Update snake panel UI with epsilon display and save model functionality
- Add config.yaml for RL hyperparameters
- Update .gitignore to exclude pycache files

The changes improve the snake game plugin by:
1. Centralizing reinforcement learning implementations
2. Providing pre-trained models for better out-of-box experience
3. Enhancing UI with training metrics
4. Making hyperparameters configurable

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ Thumbs.db
 
 # 日志文件
 *.log
+core/__pycache__/__init__.cpython-39.pyc
+core/__pycache__/data_recorder.cpython-39.pyc
+core/__pycache__/protocol_handler.cpython-39.pyc
+core/__pycache__/serial_manager.cpython-39.pyc
